[package]
name = "rlg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "rlg"
path = "src/main.rs"

[lib]
name = "rlg"
path = "src/lib.rs"


[dependencies]

bevy_replicon = "0.17.0"
bevy_renet = { version = "0.0.10", features = ["serde"] }
bincode = "1.3"
serde = "1.0"
varint-rs = "2.2"
ordered-multimap = "0.7"
clap = { version = "4.1", features = ["derive"] }

ordered-float = { version = "4.1.1", features = ["serde"] }
imagesize = "0.12"
walkdir = "2"
bevy_egui = "0.23"


bevy = { version = "0.12", default-features = true, features = [ "serialize"
    
  
] }
log = "0.4"
regex = "1.5.4"

anyhow = { version = "1.0" }
rand = "0.8"
env_logger = "0.10"
serde_json = { version = "1.0" }

